[gd_scene load_steps=19 format=3 uid="uid://bawggm7en6wxs"]

[ext_resource type="Texture2D" uid="uid://70eq1ipw5en0" path="res://Assets/Assests de Pruebas/2020-10-25 (4).png" id="1_3scli"]
[ext_resource type="Script" path="res://script/combate/combate.gd" id="1_8k8bs"]
[ext_resource type="Resource" uid="uid://ds5sdk8aw4l8r" path="res://script/combate/personajes_stats/resource/Player.tres" id="2_0vdrc"]
[ext_resource type="Resource" uid="uid://cyc3sn1p8bmn" path="res://script/combate/personajes_stats/resource/Rajang.tres" id="2_5g6qo"]
[ext_resource type="PackedScene" uid="uid://dbuixiuq0ijmx" path="res://escenas/personajes/combat_models/character_combat_container.tscn" id="5_58fqg"]
[ext_resource type="Texture2D" uid="uid://b77atfgeienqu" path="res://Assets/SpritesCombate/hud_a.png" id="6_t2p1k"]
[ext_resource type="Texture2D" uid="uid://divhgdyclosh2" path="res://Assets/SpritesCombate/botones/ataque_no_selecccionado.png" id="7_k3t3k"]
[ext_resource type="Texture2D" uid="uid://bcpbwokyqcsbq" path="res://Assets/SpritesCombate/botones/ataque_selecccionado.png" id="8_fewc1"]
[ext_resource type="Texture2D" uid="uid://chasp3710xxfs" path="res://Assets/SpritesCombate/botones/defensa_no_selecccionado.png" id="9_j2r3x"]
[ext_resource type="Texture2D" uid="uid://btpp5yl8lebvr" path="res://Assets/SpritesCombate/botones/defensa_selecccionado.png" id="10_wpyws"]
[ext_resource type="Texture2D" uid="uid://di4qe4dpmrbbs" path="res://Assets/SpritesCombate/botones/huir_no_selecccionado.png" id="11_wxol7"]
[ext_resource type="Texture2D" uid="uid://bl8ep0i6kkfu3" path="res://Assets/SpritesCombate/botones/huir_selecccionado.png" id="12_1rras"]
[ext_resource type="Texture2D" uid="uid://c8knhlhrmgo4" path="res://Assets/Assests de Pruebas/__glavenus_monster_hunter_drawn_by_milkpanda__sample-b42e3db21a9939973e0e50a33878d1ec.jpg" id="13_hu4eg"]
[ext_resource type="FontFile" uid="uid://bvx3kwcljl1mv" path="res://Assets/SpritesCombate/Font/IWANA.ttf" id="15_5rv14"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0oek"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0316m"]
bg_color = Color(0, 0, 0, 0.431373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rafup"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hg3jf"]
bg_color = Color(0, 0, 0, 1)

[node name="ContenidosCombate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k8bs")

[node name="2020-10-25(4)" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3scli")

[node name="enemy_combat_container" parent="." instance=ExtResource("5_58fqg")]
layout_mode = 0
offset_left = 43.0
offset_top = 196.0
offset_right = 963.0
offset_bottom = 979.0
scale = Vector2(0.35, 0.35)
stats = ExtResource("2_5g6qo")

[node name="player_combat_container" parent="." instance=ExtResource("5_58fqg")]
visible = false
layout_mode = 0
offset_left = 409.0
offset_top = 193.0
offset_right = 1889.0
offset_bottom = 1583.0
stats = ExtResource("2_5g6qo")

[node name="HudA" type="Sprite2D" parent="."]
visible = false
position = Vector2(574, 549)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_t2p1k")

[node name="retratos_player" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 748.0
offset_top = 154.0
offset_right = 2452.0
offset_bottom = 1758.0
scale = Vector2(0.2, 0.2)
columns = 2

[node name="character_retrato" parent="retratos_player" instance=ExtResource("5_58fqg")]
layout_mode = 2

[node name="retrato2" type="TextureRect" parent="retratos_player"]
visible = false
layout_mode = 2
texture = ExtResource("13_hu4eg")

[node name="retrato3" type="TextureRect" parent="retratos_player"]
visible = false
layout_mode = 2
texture = ExtResource("13_hu4eg")

[node name="retrato4" type="TextureRect" parent="retratos_player"]
visible = false
layout_mode = 2
texture = ExtResource("13_hu4eg")

[node name="player_actions" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -164.0
offset_right = -515.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.8, 1.8)
texture = ExtResource("6_t2p1k")
expand_mode = 1

[node name="actions" type="VBoxContainer" parent="player_actions"]
layout_mode = 0
offset_left = 330.556
offset_top = 23.8889
offset_right = 541.556
offset_bottom = 154.889
scale = Vector2(0.23, 0.23)
theme_override_constants/separation = 10
alignment = 1

[node name="attack" type="TextureButton" parent="player_actions/actions"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("7_k3t3k")
texture_pressed = ExtResource("8_fewc1")
texture_hover = ExtResource("8_fewc1")

[node name="defense" type="TextureButton" parent="player_actions/actions"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("9_j2r3x")
texture_pressed = ExtResource("10_wpyws")
texture_hover = ExtResource("10_wpyws")

[node name="run" type="TextureButton" parent="player_actions/actions"]
layout_mode = 2
size_flags_horizontal = 0
texture_normal = ExtResource("11_wxol7")
texture_pressed = ExtResource("12_1rras")
texture_hover = ExtResource("12_1rras")

[node name="stats_screen" type="Panel" parent="player_actions"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 309.0
offset_bottom = 87.0

[node name="player_combat_container1" parent="player_actions/stats_screen" instance=ExtResource("5_58fqg")]
layout_mode = 1
offset_left = -1.11108
offset_top = 4.88867
offset_right = 648.889
offset_bottom = 654.889
scale = Vector2(0.11, 0.11)
stats = ExtResource("2_0vdrc")

[node name="player_combat_container2" parent="player_actions/stats_screen" instance=ExtResource("5_58fqg")]
visible = false
layout_mode = 1
offset_left = 77.4445
offset_top = 4.88867
offset_right = 727.444
offset_bottom = 654.889
scale = Vector2(0.11, 0.11)

[node name="player_combat_container3" parent="player_actions/stats_screen" instance=ExtResource("5_58fqg")]
visible = false
layout_mode = 1
offset_left = 156.0
offset_top = 4.88867
offset_right = 806.0
offset_bottom = 654.889
scale = Vector2(0.11, 0.11)

[node name="player_combat_container4" parent="player_actions/stats_screen" instance=ExtResource("5_58fqg")]
visible = false
layout_mode = 1
offset_left = 233.0
offset_top = 5.0
offset_right = 883.0
offset_bottom = 655.0
scale = Vector2(0.11, 0.11)

[node name="attacks" type="HBoxContainer" parent="player_actions"]
layout_mode = 1
offset_left = 9.44443
offset_top = -14.4445
offset_right = 750.444
offset_bottom = 10.5555
scale = Vector2(0.5, 0.5)
theme_override_constants/separation = 15
alignment = 1

[node name="attack1" type="Button" parent="player_actions/attacks"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("15_5rv14")
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_o0oek")
theme_override_styles/hover = SubResource("StyleBoxFlat_0316m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rafup")
text = " Attack 1 "

[node name="attack2" type="Button" parent="player_actions/attacks"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("15_5rv14")
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_o0oek")
theme_override_styles/hover = SubResource("StyleBoxFlat_0316m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rafup")
text = " Attack 2 "

[node name="attack3" type="Button" parent="player_actions/attacks"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("15_5rv14")
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_o0oek")
theme_override_styles/hover = SubResource("StyleBoxFlat_0316m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rafup")
text = " Attack 3 "

[node name="attack4" type="Button" parent="player_actions/attacks"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("15_5rv14")
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_o0oek")
theme_override_styles/hover = SubResource("StyleBoxFlat_0316m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rafup")
text = " Attack 4 "

[node name="text_box" type="Panel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 138.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hg3jf")

[node name="label" type="Label" parent="text_box"]
layout_mode = 0
offset_left = 11.0
offset_top = 5.0
offset_right = 155.0
offset_bottom = 43.0
theme_override_font_sizes/font_size = 25
text = "asdadasdas"

[connection signal="pressed" from="player_actions/actions/attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="player_actions/actions/defense" to="." method="_on_defense_pressed"]
[connection signal="pressed" from="player_actions/actions/run" to="." method="_on_run_pressed"]
[connection signal="pressed" from="player_actions/attacks/attack1" to="." method="_on_attack_1_pressed"]
[connection signal="pressed" from="player_actions/attacks/attack2" to="." method="_on_attack_2_pressed"]
[connection signal="pressed" from="player_actions/attacks/attack3" to="." method="_on_attack_3_pressed"]
[connection signal="pressed" from="player_actions/attacks/attack4" to="." method="_on_attack_4_pressed"]
